# viacep

./: pyproject.toml  readme.md
src/viacep/: cli.py  exceptions.py  models.py  services.py
tests/: conftest.py  test_cli.py  test_viacep.py
