[tool.poetry]
name = "viacep"
version = "0.1.0"
description = "A Python package to lookup Brazilian postal codes (CEP) using ViaCEP API"
authors = ["Adriano Bono <bonoworks@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
viacep = "viacep.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"